[package]
name = "backend"
version = "0.1.0"
authors = ["Nicholas Yang <ny585@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4.2"
serde = { version = "1.0.99", features = ["derive"] }
rocket_cors = "0.5.0"
rand = "0.7.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]
